--- a/web03tablas.html
+++ b/web03tablas.html
@@ -7,6 +7,35 @@
     <title>Document</title>
 </head>
 <body>
-    prueba para jithub
+    <h1>Este es un ejemplo de table HTML</h1>
+    <table border="1">
+        <tr>
+            <td>Columna 1</td>
+            <td>Columna 2</td>
+        </tr>
+
+        <tr>
+            <td>Columna 3</td>
+            <td>Columna 4</td>
+        </tr>
+        <tr>
+            <td>Columna 1</td>
+            <td>Columna 2</td>
+        </tr>
+
+        <tr>
+            <td>Columna 3</td>
+            <td>Columna 4</td>
+        </tr>
+        <tr>
+            <td>Columna 1</td>
+            <td>Columna 2</td>
+        </tr>
+
+        <tr>
+            <td>Columna 3</td>
+            <td>Columna 4</td>
+        </tr>
+    </table>
 </body>
 </html>
